# corset

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.org  build.rs  cliff.toml  ffi_example.go  inspector.tape  shell.nix  test.lisp  test2.lisp
.github/workflows/: release.yml  rust.yml
src/: cgo-main.rs  cgo.rs  check.rs  column.rs  compiler.rs  compute.rs  constants.rs  corset-fmt.pest  corset.pest  dag.rs  errors.rs  evaluation_tests.rs  expander.rs  formatter.rs  fuser.rs  go.rs  import.rs  import_simd.rs  lib.rs  main.rs  parser.rs  pretty.rs  stdlib.lisp  tests.rs  transformer.rs  utils.rs
src/compiler/: codetyper.rs  common.rs  compiletime.rs  define.rs  definitions.rs  errors.rs  fmtparser.rs  generator.rs  mod.rs  node.rs  parser.rs  tables.rs  types.rs  typing.rs
src/compiler/parser/: constants.rs  definitions.rs  fmtparser.rs  mod.rs  parser.rs  purefuns.rs
src/exporters/: besu.java  besu.rs  besu_module_trace.java  besu_trace_columns.java  besu_trace_columns_with_regs.java  conflater.kt  conflater.rs  constraint.tex  convert.rs  debugger.rs  go.rs  latex.rs  mod.rs  wizardiop.go  wizardiop.rs  zkgeth.go  zkgeth.rs
src/inspect/: forth.rs  mod.rs  widgets.rs
src/inspect/widgets/: number.rs  regexp.rs  scan.rs
src/pretty/: mod.rs  opcodes.rs
src/structs/: field.rs  handle.rs  mod.rs
src/transformer/: concretize.rs  ifs.rs  inverses.rs  nhood.rs  selectors.rs  shifter.rs  sort.rs  splatter.rs  statics.rs
src/transformer/agnostic/: ifs.rs  mod.rs  nhood.rs  shifter.rs  sort.rs  statics.rs
src/transformer/specific/: inverses.rs  mod.rs  selectors.rs  spread.rs
src/transpilers/: go.rs  latex.rs  mod.rs
tests/: alias.accepts  alias.lisp  arrays.lisp  arrays_1.accepts  arrays_1.lisp  computed.lisp  constants.lisp  constants.rejects  decomposition.lisp  exp.lisp  for.lisp  fuse.lisp  ifeqelse.lisp  issue219_a.lisp  issue219_b.lisp  issue219_c.lisp  issue219_d.lisp  issue241_a.lisp  issue241_b.lisp  issue241_c.lisp  issue241_d.lisp  issue241_e.lisp  iszero.accepts  iszero.lisp  iszero.rejects  ith.lisp  len_multiplier_1.accepts  len_multiplier_1.lisp  len_multiplier_1.rejects  len_multiplier_2.lisp  models.rs  multiconstraints.lisp  nested_ifs.lisp  out_of_order.lisp  persp.lisp  plookup.lisp  shadowing.lisp  shift.lisp  shift_1.lisp  shift_2.lisp  (+6 more)
tests/old/: alias.lisp  alias.rejects  computed.lisp  constants.accepts  decomposition.lisp  inrange.lisp  iszero.accepts  iszero.lisp  modules.lisp  multiconstraints.lisp  not.lisp  permutations.lisp  persp.lisp  shift_1.accepts  shift_1.lisp  shift_1.rejects  shift_2.accepts  shift_2.rejects  types.lisp
