[package]
name = "corset"
version = "9.0.0-alpha"
edition = "2021"
rust-version = "1.70.0"
authors = [ "Franklin Delehelle <franklin.delehelle@consensys.net>" ]
build = "build.rs"

[lib]
crate-type = ["cdylib", "staticlib"]

[[bin]]
name = "corset"
path = "src/main.rs"

[dependencies]
anyhow = "1"
buche = "0.7"
buildstructor = "0.5.2"
cached = { version = "0.45", default-features = false }
clap = { version = "4", features = ["derive", "wrap_help", "cargo"], optional = true }
clap-verbosity-flag = { version = "2", optional = true }
convert_case = "0.6"
crossterm = "0.27.0"
either = { version = "1.8.1", features = ["serde"] }
errno = "0.3.0"
flate2 = "1"
handlebars = { version = "4.3.6", default-features = false, optional = true }
indicatif = { version = "0.17", optional = true }
itertools = "0.11"
lazy_static = "1.4"
libc = {version = "0.2.139", default-features = false }
log = "0.4"
logging_timer = "1.1.0"
maplit = "1.0"
md5 = "0.7"
num-bigint = { version = "0.4", features = ["serde"] }
num-traits = "0.2"
owo-colors = "3.5.0"
pairing_ce = "0.28"
pest = { version = "2.4", optional = true }
pest_derive = { version = "2.4", optional = true }
postgres = { version = "0.19", optional = true }
ratatui = {version = "0.23", optional = true }
rayon = "1.5"
regex-lite = "0.1"
ron = "^0.7.0"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["arbitrary_precision"] }
sorbus = "0.9"
thiserror = "1.0.38"
ratatui-textarea = { version = "0.3", optional = true }
ellipse = "0.2.0"

[target.'cfg(all(target_arch = "x86_64", target_feature = "avx"))'.dependencies]
simd-json = "0.11"

[features]
cli = ["dep:clap-verbosity-flag", "dep:clap"]
conflater = []
default = ["interactive", "cli", "exporters", "parser", "inspector"]
exporters = ["dep:handlebars"]
inspector = ["dep:ratatui", "dep:ratatui-textarea", "cli", "parser"]
interactive = ["dep:indicatif"]
parser = ["dep:pest", "dep:pest_derive"]
postgres = ["dep:postgres"]

[package.metadata.release]
tag-prefix = ""
publish = false
pre-release-hook = ["git-cliff", "-o", "CHANGELOG.md", "--tag", "{{version}}"]
allow-branch = ["master"]

# Always optimize dependencies
[profile.dev.package."*"]
opt-level = 3

[build-dependencies]
cbindgen = {version = "0.26", default-features = false }
